# python-decorator-tutorial

./: .gitignore  README.en.md  README.md  Running_Github_codes_in_Colab.ipynb  pyproject.toml
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md
src/decorator_tutorial/: 01_problem_without_decorator.py  02_1_universal_decorator.py  02_basic_decorator.py  03_decorator_with_args.py  04_functools_wraps.py  05_builtin_decorators.py  06_class_decorator.py  07_paramspec_basics.py  08_generic_decorator.py  09_decorator_factory.py  10_stacking_decorators.py  11_real_world_patterns.py  __init__.py
tests/: test_01_problem.py  test_02_basic.py  test_03_args.py  test_04_wraps.py  test_05_builtin.py  test_06_class.py  test_07_paramspec.py  test_08_generic.py  test_09_factory.py  test_10_stacking.py  test_11_patterns.py
